Use base notebook docker image Implement print function and use it in the notebooks Update to numpy 1.14.0

--- a/notebooks/Experiments - Rapp FamilyHistory.ipynb
+++ b/notebooks/Experiments - Rapp FamilyHistory.ipynb
@@ -14,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# %load -r 1-10 Rapp-FamilyHistory/person-relationship.csv\n",
@@ -32,51 +34,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: %%javascript is a cell magic, but the cell body is empty.\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "import redblackgraph as rb\n",
     "import numpy as np\n",
-    "np.set_printoptions(edgeitems=11)"
+    "np.set_printoptions(linewidth=np.nan, threshold=np.nan)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "hide_input": false,
+    "scrolled": true
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-1  2  3  0  0  0  0  0  0  0  0 ...,  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0 -1  0  2  3  0  0  0  0  0  0 ...,  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  1  0  0  2  3  0  0  0  0 ...,  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0 -1  0  0  0  2  3  0  0 ...,  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  1  0  0  0  0  2  3 ...,  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  0 ...,  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0 ...,  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0 -1  0  0  0 ...,  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  1  0  0 ...,  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0 -1  0 ...,  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  1 ...,  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " ..., \n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ..., -1  0  0  0  2  3  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  1  0  0  0  0  2  3  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0 -1  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  1  0  0  0  0  3  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0 -1  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0  0  1  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0  0  0 -1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0  0  0  0  1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0  0  0  0  0  1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0  0  0  0  0  0  1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0  0  0  0  0  0  0  1]]\n"
-     ]
+     "data": {
+      "application/javascript": [
+       "reader = rb.RelationshipFileReader('Rapp-FamilyHistory/person-relationship.csv')\n",
+       "R = reader()\n",
+       "writer = rb.RedBlackGraphWriter(reader.get_vertex_key())\n",
+       "writer(R, output_file=\"Rapp-FamilyHistory/r.xlsx\")\n",
+       "print(R)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "%%javascript IPython.OutputArea.auto_scroll_threshold = 9999;\n",
     "reader = rb.RelationshipFileReader('Rapp-FamilyHistory/person-relationship.csv')\n",
     "R = reader()\n",
     "writer = rb.RedBlackGraphWriter(reader.get_vertex_key())\n",
@@ -87,7 +97,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -132,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -151,7 +165,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -198,7 +214,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -217,7 +235,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -262,7 +282,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": []
   }
