Changes to get better printout in Experiments notebook

--- a/notebooks/Experiments - Rapp FamilyHistory.ipynb
+++ b/notebooks/Experiments - Rapp FamilyHistory.ipynb
@@ -10374,7 +10374,7 @@
     "writer.append_vertex_key(('B', 'M-R', '2001'))\n",
     "\n",
     "R_lambda = R_star.vertex_relational_composition(u, v, 1)\n",
-    "#writer(R_lambda, output_file=\"Rapp-FamilyHistory/composition.results.xlsx\")\n",
+    "writer(R_lambda, output_file=\"Rapp-FamilyHistory/composition.results.xlsx\")\n",
     "df = pd.DataFrame(R_lambda)\n",
     "df"
    ]
@@ -14015,15 +14015,6 @@
     "df = pd.DataFrame(R_canonical)\n",
     "df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
