Update thoughts on vector space

--- a/notebooks/Abstract Vector Space.ipynb
+++ b/notebooks/Abstract Vector Space.ipynb
@@ -60,6 +60,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notes from Gilbert Strang's Lectures\n",
+    "\n",
+    "## Rank and Solutions\n",
+    "* $rank = m = n \\implies rref(R) = I \\implies$ 1 solution.\n",
+    "* $rank = n < m \\implies rref(R) = \\begin{bmatrix}I \\\\ 0\\end{bmatrix} \\implies$ 0 or 1 solution.\n",
+    "* $rank = m < n \\implies rref(R) = \\begin{bmatrix}I & F\\end{bmatrix} \\implies \\infty$ solutions.\n",
+    "* $rank < m \\land rank < n \\implies rref(R) = \\begin{bmatrix}I & F \\\\ 0 & 0\\end{bmatrix} \\implies$ 0 or $\\infty$ solutions.\n",
+    "\n",
+    "## Linear independance\n",
+    "Vectors are linear independant if no combination gives the $\\vec{0}$ except the zero combination. Or,... if the vectors are the columns of a matrix $A$, they are independant if the nullspace of $A$ is only the $\\vec{0}$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -68,22 +84,9 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
