Minor changes to notebooks Update notebook docker image to use latest form of rappdw/docker-ds

--- a/notebooks/Abstract Vector Space.ipynb
+++ b/notebooks/Abstract Vector Space.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Family History as an Abstract Vector Space\n",
+    "# Discrete Abstract Vector Spaces\n",
     "\n",
     "In exploring Red Black Graphs, we see a number of linear algebra applications. I'll explore formalizing things just a bit to ensure that Red Black Graphs are an abstract vector space.\n",
     "\n",
