--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,20 +185,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['b', 'r', 'r']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_traversal_path(12)"
    ]
@@ -249,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,21 +351,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-1  2  3  4  0]\n",
-      " [ 0 -1  0  2  0]\n",
-      " [ 0  0  1  0  0]\n",
-      " [ 0  0  0 -1  0]\n",
-      " [ 2  4  5  8  1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import redblackgraph as rb\n",
     "R = [[-1,  2,  3,  0,  0],\n",
@@ -425,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,20 +731,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 1, 1, 2, 1, 2]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "R = [[-1, 0, 0, 2, 0, 3, 0],\n",
     "     [ 0,-1, 0, 0, 0, 0, 0],\n",
@@ -796,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,23 +866,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1  2  5  4  0  0  0]\n",
-      " [ 0 -1  3  2  0  0  0]\n",
-      " [ 0  0  1  0  0  0  0]\n",
-      " [ 0  0  0 -1  0  0  0]\n",
-      " [ 0  0  0  0 -1  3  2]\n",
-      " [ 0  0  0  0  0  1  0]\n",
-      " [ 0  0  0  0  0  0 -1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rb.print(triangularize(warshall(R)[0]))"
    ]
@@ -996,33 +948,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A_star:\n",
-      "[[-1  2  3  0  0  4  5  6  7  0  0  8  9 12 13]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  0  4  5  0  0]\n",
-      " [ 0  0  1  0  0  0  0  2  3  0  0  0  0  4  5]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  4  5  0  0  0  0  8  9  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  0  2  3  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0 -1  0  0  0  0  0  2  3]\n",
-      " [ 0  0  0  0  0  0  0  0  1  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  2  0 -1  3  0  0  4  5]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 -1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0 -1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  1]] \n",
-      "diameter: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import redblackgraph.simple as smp\n",
@@ -1059,32 +987,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A1_star:\n",
-      "[[-1  2  3  0  0  4  5  7  0  0  8  9  0  0]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  4  5  0  0]\n",
-      " [ 0  0  1  0  0  0  0  3  0  0  0  0  0  0]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  4  5  0  0  0  8  9  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  2  3  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  1  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0 -1  3  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0 -1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0 -1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  1]] \n",
-      "diameter: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#       D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em\n",
     "A1 = [[-1,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0], # D\n",
@@ -1118,31 +1023,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-1  2  3  0  0  0  0  0  0  0  0  0 12 13  6]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  1  0  0  0  0  3  0  0  0  0  4  5  2]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  2  3  0  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  1  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0 -1  3  0  0  4  5  2]\n",
-      " [ 0  0  0  0  0  0  0  0  0  1  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0 -1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0 -1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  2  3 -1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#      D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em\n",
     "u = [[ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3]] \n",
@@ -1175,31 +1058,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-1  2  3  0  0  4  5  7  0  0  8  9 12 13  6]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  4  5  0  0  0]\n",
-      " [ 0  0  1  0  0  0  0  3  0  0  0  0  4  5  2]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  4  5  0  0  0  8  9  0  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  2  3  0  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  1  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0 -1  3  0  0  4  5  2]\n",
-      " [ 0  0  0  0  0  0  0  0  0  1  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0 -1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0 -1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  2  3 -1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#        D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em   J\n",
     "R1 = [[ -1,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],  # D\n",
@@ -1233,17 +1094,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.4 ms ± 97.4 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "B1 = copy.deepcopy(A1)\n",
@@ -1252,17 +1105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "316 µs ± 4.66 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "A_lambda = smp.vertex_relational_composition(u, A1, v, -1)"
@@ -1270,17 +1115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "360 µs ± 18.8 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "A_lambda = smp.edge_relational_composition(R, 2, 14, 2)"
@@ -1296,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,33 +1158,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A_star:\n",
-      "[[-1  2  3  0  0  4  5  6  7  0  0  8  9 12 13]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  0  4  5  0  0]\n",
-      " [ 0  0  1  0  0  0  0  2  3  0  0  0  0  4  5]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  4  5  0  0  0  0  8  9  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  0  2  3  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0 -1  0  0  0  0  0  2  3]\n",
-      " [ 0  0  0  0  0  0  0  0  1  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  2  0 -1  3  0  0  4  5]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 -1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0 -1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  1]] \n",
-      "diameter: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A_star, diameter = A.transitive_closure()\n",
     "print(f\"A_star:\\n{A_star} \\ndiameter: {diameter}\")"
@@ -1363,32 +1176,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A1_star:\n",
-      "[[-1  2  3  0  0  4  5  7  0  0  8  9  0  0]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  4  5  0  0]\n",
-      " [ 0  0  1  0  0  0  0  3  0  0  0  0  0  0]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  4  5  0  0  0  8  9  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  2  3  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  1  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0 -1  3  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0 -1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0 -1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  1]] \n",
-      "diameter: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#                D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em\n",
     "A1 = rb.array([[-1,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0], # D\n",
@@ -1421,49 +1211,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "u_lambda:\n",
-      "[[0 0 0 0 0 0 0 0 0 0 0 0 2 3]]\n",
-      "v_lambda:\n",
-      "[[6]\n",
-      " [0]\n",
-      " [2]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [2]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]]\n",
-      "A_lambda:\n",
-      "[[-1  2  3  0  0  4  5  7  0  0  8  9 12 13  6]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  4  5  0  0  0]\n",
-      " [ 0  0  1  0  0  0  0  3  0  0  0  0  4  5  2]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  4  5  0  0  0  8  9  0  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  2  3  0  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  1  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0 -1  3  0  0  4  5  2]\n",
-      " [ 0  0  0  0  0  0  0  0  0  1  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0 -1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0 -1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  2  3 -1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#               D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em\n",
     "u = rb.array([[ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3]], dtype=np.int32) \n",
@@ -1502,34 +1252,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1,  2,  3,  0,  0,  4,  5,  7,  0,  0,  8,  9, 12, 13,  6],\n",
-       "       [ 0, -1,  0,  0,  0,  2,  3,  0,  0,  0,  4,  5,  0,  0,  0],\n",
-       "       [ 0,  0,  1,  0,  0,  0,  0,  3,  0,  0,  0,  0,  4,  5,  2],\n",
-       "       [ 0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  2,  0,  3, -1,  4,  5,  0,  0,  0,  8,  9,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0, -1,  0,  0,  0,  0,  2,  3,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0, -1,  3,  0,  0,  4,  5,  2],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3, -1]])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#                 D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em   J\n",
     "R1 = rb.array([[ -1,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],  # D\n",
@@ -1563,17 +1288,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17.3 µs ± 173 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "A_star, diameter = A.transitive_closure()"
@@ -1581,17 +1298,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 µs ± 260 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "A_lambda = A1_star.vertex_relational_composition(u, v, -1)"
@@ -1599,17 +1308,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.97 µs ± 81.3 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "A_lambda = R.edge_relational_composition(2, 14, 2)"
@@ -1624,20 +1325,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9999999999999998"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from numpy.linalg import det\n",
     "det(A_lambda)"
@@ -1645,43 +1335,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'black': 7, 'red': 8}"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "A_lambda.cardinality()"
    ]
   }
  ],
  "metadata": {
-  "hide_input": false,
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
