Create branch to better explore vector space implications

--- a/notebooks/Avos Vector Space.ipynb
+++ b/notebooks/Avos Vector Space.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Discrete Abstract Vector Spaces\n",
+    "# Avos Vector Spaces\n",
     "\n",
     "In exploring Red Black Graphs, we see a number of linear algebra applications. I'll explore formalizing things just a bit to ensure that Red Black Graphs are an abstract vector space.\n",
     "\n",
@@ -14,10 +14,10 @@
     "2. Commutativity of Vector Addition: $\\vec{u} + \\vec{v} = \\vec{v} + \\vec{u}$\n",
     "3. Identity element of Vector Addition: There exists an element $\\vec{0} \\in V$ such that $\\vec{v} + \\vec{0} = \\vec{v}$ for all ${\\vec{v} \\in V}$\n",
     "4. Inverse elements of addition: For every ${\\vec{v} \\in V}$, there exists an element $-{\\vec{v} \\in V}$ such that ${\\vec{v} + (-\\vec{v}) = \\vec{0}}$\n",
-    "5. Compatibility of scalar multiplication with field multiplication: $a(b\\vec{v}) = (ab)\\vec{f}$\n",
+    "5. Compatibility of scalar multiplication with field multiplication: $a(b\\vec{v}) = (ab)\\vec{v}$\n",
     "6. Identity element of scalar multiplication: $1\\vec{v} = \\vec{v}$\n",
     "7. Distributivity of scalar multiplication with respect to vector addition: $a(\\vec{u} + \\vec{v}) = a\\vec{u} + a\\vec{v}$\n",
-    "8. Distributivity of scalar multiplication with respect to field addition: $(a + b)\\vec{v} = a\\vec{v} + b\\vec{b}$\n",
+    "8. Distributivity of scalar multiplication with respect to field addition: $(a + b)\\vec{v} = a\\vec{v} + b\\vec{v}$\n",
     "\n",
     "I'll designate the vector space resulting from the exploration of representing family history utilizing the exploration of Red Black Graphs as the **Avos Vector Space**.\n",
     "\n",
