add compute_sign to reference avos implementation

--- a/notebooks/Genealogy and Vector Spaces.ipynb
+++ b/notebooks/Genealogy and Vector Spaces.ipynb
@@ -56,6 +56,8 @@
     "\n",
     "Taken together the definitions of mutliplication and addition satisfy axioms 7 and 8. (Obvious, but not quite trivial)\n",
     "\n",
+    "While the following code example addresses a product that includes negative operands, I'll defer addressing that topic.\n",
+    "\n",
     "**Note:** What rules dictate operating over negative integers?\n",
     "\n",
     "## Reference Implementation (Python)\n"
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,6 +99,32 @@
     "        bit_position += 1\n",
     "    return bit_position\n",
     "\n",
+    "def compute_sign(x: int, y:int) -> int:\n",
+    "    '''\n",
+    "    This is a little complicated to explain at this point, so for now, just trust me\n",
+    "    :param x:\n",
+    "    :param y:\n",
+    "    :return:\n",
+    "    '''\n",
+    "\n",
+    "    a = x >= 0\n",
+    "    b = y >=0\n",
+    "    c = x == -1\n",
+    "    d = y == -1\n",
+    "\n",
+    "    # with the truth states of a, b, c, d, sign will be:\n",
+    "    #   as of yet undetermined (u) - (!a or !b) and (!c and !d)\n",
+    "    #   negative (n) - (!a and !b) and !u\n",
+    "    #   positive (p) = !(n or u)\n",
+    "    if (not a or not b) and (not c and not d):\n",
+    "        sign = None\n",
+    "    elif not a and not b:\n",
+    "        sign = -1\n",
+    "    else:\n",
+    "        sign = 1\n",
+    "\n",
+    "    return sign\n",
+    "\n",
     "def avos_product(x: int, y: int) -> int:\n",
     "    '''\n",
     "    The avos product replaces the left most significant bit of operand 2 with operand 1\n",
@@ -105,7 +133,7 @@
     "    :return: avos product\n",
     "    '''\n",
     "\n",
-    "    sign = 1 if x >= 0 == y >= 0 else -1\n",
+    "    sign = compute_sign(x, y)\n",
     "    x, y = abs(x), abs(y)\n",
     "\n",
     "    # The zero property of the avos product\n",
@@ -113,7 +141,7 @@
     "        return 0\n",
     "\n",
     "    bit_position = leftmost_significant_bit_position(y)\n",
-    "    return sign * (y & (2 ** bit_position - 1)) | (x << bit_position)\n"
+    "    return sign * ((y & (2 ** bit_position - 1)) | (x << bit_position))\n"
    ]
   },
   {
@@ -125,9 +153,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "pygments_lexer": "ipython3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
