rename redblackgraph.simple to redblackgraph.reference to reflect this is a reference implementation

--- a/notebooks/Genealogy and Vector Spaces.ipynb
+++ b/notebooks/Genealogy and Vector Spaces.ipynb
@@ -69,7 +69,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load ../redblackgraph/simple/avos.py\n",
+    "# %load ../redblackgraph/reference/avos.py\n",
+    "from redblackgraph.reference.util import compute_sign, leftmost_significant_bit_position\n",
+    "\n",
     "def avos_sum(x: int, y: int) -> int:\n",
     "    '''\n",
     "    The avos sum is the non-zero minumum of x and y unless x == -y in which case the result is 0\n",
@@ -86,44 +88,6 @@
     "    if x < y:\n",
     "        return x\n",
     "    return y\n",
-    "\n",
-    "def leftmost_significant_bit_position(x: int) -> int:\n",
-    "    '''\n",
-    "    Given an integer, return the bit position of it's leftmost significant bit\n",
-    "    :param x: operand\n",
-    "    :return: bit position of leftmost significant bit\n",
-    "    '''\n",
-    "    bit_position = 0\n",
-    "    while (x > 1):\n",
-    "        x >>= 1\n",
-    "        bit_position += 1\n",
-    "    return bit_position\n",
-    "\n",
-    "def compute_sign(x: int, y:int) -> int:\n",
-    "    '''\n",
-    "    This is a little complicated to explain at this point, so for now, just trust me\n",
-    "    :param x:\n",
-    "    :param y:\n",
-    "    :return:\n",
-    "    '''\n",
-    "\n",
-    "    a = x >= 0\n",
-    "    b = y >=0\n",
-    "    c = x == -1\n",
-    "    d = y == -1\n",
-    "\n",
-    "    # with the truth states of a, b, c, d, sign will be:\n",
-    "    #   as of yet undetermined (u) - (!a or !b) and (!c and !d)\n",
-    "    #   negative (n) - (!a and !b) and !u\n",
-    "    #   positive (p) = !(n or u)\n",
-    "    if (not a or not b) and (not c and not d):\n",
-    "        sign = None\n",
-    "    elif not a and not b:\n",
-    "        sign = -1\n",
-    "    else:\n",
-    "        sign = 1\n",
-    "\n",
-    "    return sign\n",
     "\n",
     "def avos_product(x: int, y: int) -> int:\n",
     "    '''\n",
