--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,16 +295,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load ../redblackgraph/reference/warshall.py\n",
     "import numpy as np\n",
+    "from dataclasses import dataclass\n",
+    "from typing import Sequence\n",
     "from redblackgraph.reference import avos_sum, avos_product, leftmost_significant_bit_position\n",
     "\n",
     "\n",
-    "def warshall(M):\n",
+    "@dataclass\n",
+    "class WarshallResult:\n",
+    "    W: np.array\n",
+    "    diameter: int\n",
+    "\n",
+    "def warshall(M: Sequence[Sequence[int]]) :\n",
     "    '''Computes the transitive closure of a Red Black adjacency matrix and as a side-effect,\n",
     "    the diameter.'''\n",
     "\n",
@@ -319,7 +326,7 @@
     "            for j in range(n):\n",
     "                W[i][j] = avos_sum(W[i][j], avos_product(W[i][k], W[k][j]))\n",
     "                diameter = max(diameter, W[i][j])\n",
-    "    return W, leftmost_significant_bit_position(diameter)"
+    "    return WarshallResult(W, leftmost_significant_bit_position(diameter))"
    ]
   },
   {
@@ -331,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +351,7 @@
        "       [ 2,  4,  5,  8,  1]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +363,7 @@
     "     [ 0,  0,  1,  0,  0],\n",
     "     [ 0,  0,  0, -1,  0],\n",
     "     [ 2,  0,  0,  0,  1]]\n",
-    "warshall(R)[0]"
+    "warshall(R).W"
    ]
   },
   {
@@ -871,28 +878,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1, 2, 5, 4, 0, 0, 0],\n",
-       " [0, -1, 3, 2, 0, 0, 0],\n",
-       " [0, 0, 1, 0, 0, 0, 0],\n",
-       " [0, 0, 0, -1, 0, 0, 0],\n",
-       " [0, 0, 0, 0, -1, 3, 2],\n",
-       " [0, 0, 0, 0, 0, 1, 0],\n",
-       " [0, 0, 0, 0, 0, 0, -1]]"
+       "[[-1, 0, 0, 2, 0, 4, 0, 0, 9, 0, 0, 5, 3, 0, 8],\n",
+       " [0, -1, 0, 2, 0, 4, 3, 0, 9, 0, 7, 5, 0, 0, 8],\n",
+       " [0, 0, -1, 0, 2, 0, 0, 5, 0, 3, 0, 0, 0, 4, 0],\n",
+       " [0, 0, 0, -1, 0, 2, 0, 0, 5, 0, 0, 3, 0, 0, 4],\n",
+       " [0, 0, 0, 0, -1, 0, 0, 3, 0, 0, 0, 0, 0, 2, 0],\n",
+       " [0, 0, 0, 0, 0, -1, 0, 0, 3, 0, 0, 0, 0, 0, 2],\n",
+       " [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 3, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1]]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "triangularize(warshall(R)[0])"
+    "triangularize(warshall(R).W)"
    ]
   },
   {
@@ -1019,8 +1034,8 @@
     "     [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1]  # Em\n",
     "    ]\n",
     "B = copy.deepcopy(A)\n",
-    "A_star, diameter = smp.warshall(B)\n",
-    "print(f\"A_star:\\n{A_star} \\ndiameter: {diameter}\")"
+    "res = smp.warshall(B)\n",
+    "print(f\"A_star:\\n{res.W} \\ndiameter: {res.diameter}\")"
    ]
   },
   {
@@ -1077,8 +1092,8 @@
     "      [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1]  # Em\n",
     "     ]\n",
     "B1 = copy.deepcopy(A1)\n",
-    "A1_star, diameter = smp.warshall(B1)\n",
-    "print(f\"A1_star:\\n{A1_star} \\ndiameter: {diameter}\")"
+    "res = smp.warshall(B1)\n",
+    "print(f\"A1_star:\\n{res.W} \\ndiameter: {res.diameter}\")"
    ]
   },
   {
@@ -1198,7 +1213,7 @@
     "      [  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0], # Em\n",
     "      [  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3, -1]  # J\n",
     "      ]\n",
-    "R = smp.warshall(R1)[0]\n",
+    "R = smp.warshall(R1).W\n",
     "# Missing edge is R -> J, 2\n",
     "A_lambda = smp.edge_relational_composition(R, 2, 14, 2)\n",
     "A_lambda"
@@ -1227,7 +1242,7 @@
    "source": [
     "%%timeit\n",
     "B1 = copy.deepcopy(A1)\n",
-    "A1_star, diameter = smp.warshall(B1)"
+    "res = smp.warshall(B1)"
    ]
   },
   {
