Type hinting for calc relationship

--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -404,15 +404,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load ../redblackgraph/reference/calc_relationship.py\n",
+    "from dataclasses import dataclass\n",
+    "from typing import Sequence\n",
     "from redblackgraph.reference import leftmost_significant_bit_position\n",
     "\n",
     "\n",
-    "def lookup_relationship(da, db):\n",
+    "@dataclass\n",
+    "class Relationship:\n",
+    "    common_ancestor: int\n",
+    "    relationship: str\n",
+    "\n",
+    "def lookup_relationship(da: int, db: int) -> str:\n",
     "    '''\n",
     "    This is a very rudimentary implementation of a Consanguinity lookup and doesn't handle many\n",
     "    cases correctly.\n",
@@ -420,12 +427,24 @@
     "    :param db: generational distance from v to common ancester\n",
     "    :return: a string designating relationship\n",
     "    '''\n",
+    "    da, db = abs(da), abs(db)\n",
     "    removal = abs(da - db)\n",
-    "    generational = min(da, db)\n",
-    "    return f\"{generational - 1} cousin {removal} removed\"\n",
+    "    if da == 0 or db == 0:\n",
+    "        # direct ancestor\n",
+    "        if removal == 1:\n",
+    "            return \"parent\"\n",
+    "        if removal == 2:\n",
+    "            return \"grandparent\"\n",
+    "        if removal == 3:\n",
+    "            return \"great grandparent\"\n",
+    "        return f\"{removal - 2} great grandparent\"\n",
+    "    else:\n",
+    "        # cousin\n",
+    "        generational = min(da, db)\n",
+    "        return f\"{generational - 1} cousin {removal} removed\"\n",
     "\n",
     "\n",
-    "def calculate_relationship(a, b):\n",
+    "def calculate_relationship(a: Sequence[int], b: Sequence[int]) -> Relationship:\n",
     "    '''\n",
     "    Determine if a relationship exists between u, v where u, v are row vectors of the transitive\n",
     "    closure of a Red Black adjacency matrix\n",
@@ -440,8 +459,9 @@
     "                                  default=(-1, (0, 0)))\n",
     "\n",
     "    if common_ancestor == -1:\n",
-    "        return \"No Relationship\", -1\n",
-    "    return lookup_relationship(leftmost_significant_bit_position(x), leftmost_significant_bit_position(y)), common_ancestor\n"
+    "        return Relationship(-1, \"No Relationship\")\n",
+    "    return Relationship(common_ancestor,\n",
+    "                        lookup_relationship(leftmost_significant_bit_position(x), leftmost_significant_bit_position(y)))\n"
    ]
   },
   {
