--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "       [ 2,  4,  5,  8,  1]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
        "[1, 2, 1, 1, 2, 1, 2]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,17 +794,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load ../redblackgraph/reference/triangularization.py\n",
     "import numpy as np\n",
     "\n",
+    "from dataclasses import dataclass\n",
+    "from typing import Dict, Iterator, Sequence, Tuple\n",
     "from collections import defaultdict\n",
     "from typing import Tuple\n",
     "\n",
-    "def find_components_extended(A):\n",
+    "@dataclass\n",
+    "class Components:\n",
+    "    ids: Sequence[int]\n",
+    "    max_pedigree_number: Sequence[int]\n",
+    "    size_map: Dict[int, int] # keyed by component id, valued by size of component\n",
+    "\n",
+    "    def get_permutation_basis(self):\n",
+    "        # this yeilds a list of tuples where each tuple is the size of the component, the component id of the vertex,\n",
+    "        # the max np for the vertex and the id of the vertex. We want the nodes\n",
+    "        # ordered by components size, componente id, max np, finally by vertex id\n",
+    "        return sorted(\n",
+    "            [(self.size_map[element[1][0]],) + element[1] + (element[0],)\n",
+    "             for element in enumerate(zip(self.ids, self.max_pedigree_number))],\n",
+    "            reverse=True\n",
+    "        )\n",
+    "\n",
+    "@dataclass\n",
+    "class Triangularization:\n",
+    "    A: Sequence[Sequence[int]]\n",
+    "    label_permutation: Sequence[int]\n",
+    "\n",
+    "def find_components_extended(A: Sequence[Sequence[int]]) -> Components:\n",
     "    \"\"\"\n",
     "    Given an input adjacency matrix (assumed to be transitively closed), triangularize the\n",
     "    matrix (simply a relabeling of the graph)\n",
@@ -849,24 +872,16 @@
     "                    component_number -= 1\n",
     "                    row_component_number = u[j]\n",
     "        v[i] = row_max\n",
-    "    return (u, v, {k:v for k,v in q.items() if v != 0})\n",
+    "    return Components(u, v, {k:v for k,v in q.items() if v != 0})\n",
     "\n",
-    "def get_triangularization_permutation_matrices(A):\n",
+    "def _get_triangularization_permutation_matrices(A: Sequence[Sequence[int]]):\n",
     "    \"\"\"\n",
     "    u, v, and q are computed via find_components_extended, and then used to compute a\n",
     "    permutation matrix, P, and P_transpose\n",
     "    :param A:\n",
     "    :return: the permutation matrices that will triangularize A\n",
     "    \"\"\"\n",
-    "    u, v, q = find_components_extended(A)\n",
-    "\n",
-    "    # this yeilds a list of tuples where each tuple is the size of the component, the component id of the vertex,\n",
-    "    # the max np for the vertex and the id of the vertex. We want the nodes\n",
-    "    # ordered by components size, componente id, max np, finally by vertex id\n",
-    "    permutation_basis = sorted(\n",
-    "        [(q[element[1][0]],) + element[1] + (element[0],) for element in enumerate(zip(u, v))],\n",
-    "        reverse=True\n",
-    "    )\n",
+    "    permutation_basis = find_components_extended(A).get_permutation_basis()\n",
     "\n",
     "    # from the permutation basis, create the permutation matrix\n",
     "    n = len(permutation_basis)\n",
@@ -881,7 +896,7 @@
     "    return P, P_transpose, label_permutation\n",
     "\n",
     "\n",
-    "def triangularize(A, P: Tuple=None):\n",
+    "def triangularize(A: Sequence[Sequence[int]]) -> Triangularization:\n",
     "    \"\"\"\n",
     "    triangularize the matrix. Uses P and P_transpose if provided, otherwise computes\n",
     "    the permutation matrices\n",
@@ -889,45 +904,36 @@
     "    :param P: the transposition matrices (P and P_transpose)\n",
     "    :return: a triangular matrix that is symmetrical to A (a relabeling of the graph vertices)\n",
     "    \"\"\"\n",
-    "    if not P:\n",
-    "        P = get_triangularization_permutation_matrices(A)\n",
+    "    P, P_t, label_permutation = _get_triangularization_permutation_matrices(A)\n",
     "\n",
     "    # triagularize A\n",
-    "    return (P[0] @ A @ P[1]).tolist()\n"
+    "    return Triangularization((P @ A @ P_t), label_permutation)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[-1, 0, 0, 2, 0, 4, 0, 0, 9, 0, 0, 5, 3, 0, 8],\n",
-       " [0, -1, 0, 2, 0, 4, 3, 0, 9, 0, 7, 5, 0, 0, 8],\n",
-       " [0, 0, -1, 0, 2, 0, 0, 5, 0, 3, 0, 0, 0, 4, 0],\n",
-       " [0, 0, 0, -1, 0, 2, 0, 0, 5, 0, 0, 3, 0, 0, 4],\n",
-       " [0, 0, 0, 0, -1, 0, 0, 3, 0, 0, 0, 0, 0, 2, 0],\n",
-       " [0, 0, 0, 0, 0, -1, 0, 0, 3, 0, 0, 0, 0, 0, 2],\n",
-       " [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 3, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1]]"
+       "array([[ 1,  2,  5,  4,  0,  0,  0],\n",
+       "       [ 0, -1,  3,  2,  0,  0,  0],\n",
+       "       [ 0,  0,  1,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  0, -1,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0, -1,  3,  2],\n",
+       "       [ 0,  0,  0,  0,  0,  1,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0, -1]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "triangularize(warshall(R).W)"
+    "triangularize(warshall(R).W).A"
    ]
   },
   {
@@ -1005,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1156,7 @@
        " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 3, -1]]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1216,7 @@
        "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3, -1]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,14 +1254,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.71 ms ± 259 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "9.13 ms ± 447 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -1267,14 +1273,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "553 µs ± 26.2 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "683 µs ± 178 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -1285,14 +1291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "767 µs ± 36.8 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "695 µs ± 14.7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -1311,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1336,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1546,7 @@
        "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3, -1]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1578,14 +1584,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28.6 µs ± 1.31 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "26 µs ± 336 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -1596,14 +1602,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13.8 µs ± 960 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "15.2 µs ± 3.73 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -1614,14 +1620,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.3 µs ± 214 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "6.39 µs ± 144 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -1639,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1654,7 @@
        "0.9999999999999998"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1660,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1669,7 +1675,7 @@
        "{'red': 8, 'black': 7}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
