--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,20 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['b', 'r', 'r']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_traversal_path(12)"
    ]
@@ -237,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,24 +327,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1,  2,  3,  4,  0],\n",
-       "       [ 0, -1,  0,  2,  0],\n",
-       "       [ 0,  0,  1,  0,  0],\n",
-       "       [ 0,  0,  0, -1,  0],\n",
-       "       [ 2,  4,  5,  8,  1]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import redblackgraph as rb\n",
     "R = [[-1,  2,  3,  0,  0],\n",
@@ -404,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,20 +726,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 1, 1, 2, 1, 2]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "R = [[-1, 0, 0, 2, 0, 3, 0],\n",
     "     [ 0,-1, 0, 0, 0, 0, 0],\n",
@@ -794,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,26 +875,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1,  2,  5,  4,  0,  0,  0],\n",
-       "       [ 0, -1,  3,  2,  0,  0,  0],\n",
-       "       [ 0,  0,  1,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0, -1,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0, -1,  3,  2],\n",
-       "       [ 0,  0,  0,  0,  0,  1,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0, -1]])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "triangularize(warshall(R).W).A"
    ]
@@ -1011,33 +957,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A_star:\n",
-      "[[-1  2  3  0  0  4  5  6  7  0  0  8  9 12 13]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  0  4  5  0  0]\n",
-      " [ 0  0  1  0  0  0  0  2  3  0  0  0  0  4  5]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  4  5  0  0  0  0  8  9  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  0  2  3  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0 -1  0  0  0  0  0  2  3]\n",
-      " [ 0  0  0  0  0  0  0  0  1  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  2  0 -1  3  0  0  4  5]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 -1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0 -1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  1]] \n",
-      "diameter: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import redblackgraph.reference as smp\n",
@@ -1074,32 +996,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A1_star:\n",
-      "[[-1  2  3  0  0  4  5  7  0  0  8  9  0  0]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  4  5  0  0]\n",
-      " [ 0  0  1  0  0  0  0  3  0  0  0  0  0  0]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  4  5  0  0  0  8  9  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  2  3  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  1  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0 -1  3  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0 -1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0 -1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  1]] \n",
-      "diameter: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#       D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em\n",
     "A1 = [[-1,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0], # D\n",
@@ -1133,34 +1032,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[-1, 2, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 12, 13, 6],\n",
-       " [0, -1, 0, 0, 0, 2, 3, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 1, 0, 0, 0, 0, 3, 0, 0, 0, 0, 4, 5, 2],\n",
-       " [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 2, 0, 3, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 2, 3, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, -1, 3, 0, 0, 4, 5, 2],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 3, -1]]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#      D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em\n",
     "u = [[ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3]] \n",
@@ -1193,34 +1067,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1,  2,  3,  0,  0,  4,  5,  7,  0,  0,  8,  9, 12, 13,  6],\n",
-       "       [ 0, -1,  0,  0,  0,  2,  3,  0,  0,  0,  4,  5,  0,  0,  0],\n",
-       "       [ 0,  0,  1,  0,  0,  0,  0,  3,  0,  0,  0,  0,  4,  5,  2],\n",
-       "       [ 0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  2,  0,  3, -1,  4,  5,  0,  0,  0,  8,  9,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0, -1,  0,  0,  0,  0,  2,  3,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0, -1,  3,  0,  0,  4,  5,  2],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3, -1]])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#        D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em   J\n",
     "R1 = [[ -1,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],  # D\n",
@@ -1254,17 +1103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9.13 ms ± 447 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "B1 = copy.deepcopy(A1)\n",
@@ -1273,17 +1114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "683 µs ± 178 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "A_lambda = smp.vertex_relational_composition(u, A1, v, -1)"
@@ -1291,17 +1124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "695 µs ± 14.7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "A_lambda = smp.edge_relational_composition(R, 2, 14, 2)"
@@ -1317,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,33 +1167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A_star:\n",
-      "[[-1  2  3  0  0  4  5  6  7  0  0  8  9 12 13]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  0  4  5  0  0]\n",
-      " [ 0  0  1  0  0  0  0  2  3  0  0  0  0  4  5]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  4  5  0  0  0  0  8  9  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  0  2  3  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0 -1  0  0  0  0  0  2  3]\n",
-      " [ 0  0  0  0  0  0  0  0  1  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  2  0 -1  3  0  0  4  5]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 -1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0 -1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  1]] \n",
-      "diameter: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A_star, diameter = A.transitive_closure()\n",
     "print(f\"A_star:\\n{A_star} \\ndiameter: {diameter}\")"
@@ -1384,32 +1185,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A1_star:\n",
-      "[[-1  2  3  0  0  4  5  7  0  0  8  9  0  0]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  4  5  0  0]\n",
-      " [ 0  0  1  0  0  0  0  3  0  0  0  0  0  0]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  4  5  0  0  0  8  9  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  2  3  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  1  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0 -1  3  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0 -1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0 -1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  1]] \n",
-      "diameter: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#                D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em\n",
     "A1 = rb.array([[-1,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0], # D\n",
@@ -1442,49 +1220,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "u_lambda:\n",
-      "[[0 0 0 0 0 0 0 0 0 0 0 0 2 3]]\n",
-      "v_lambda:\n",
-      "[[6]\n",
-      " [0]\n",
-      " [2]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [2]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]]\n",
-      "A_lambda:\n",
-      "[[-1  2  3  0  0  4  5  7  0  0  8  9 12 13  6]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  4  5  0  0  0]\n",
-      " [ 0  0  1  0  0  0  0  3  0  0  0  0  4  5  2]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  4  5  0  0  0  8  9  0  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  2  3  0  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  1  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0 -1  3  0  0  4  5  2]\n",
-      " [ 0  0  0  0  0  0  0  0  0  1  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0 -1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0 -1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  2  3 -1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#               D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em\n",
     "u = rb.array([[ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3]], dtype=np.int32) \n",
@@ -1523,34 +1261,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1,  2,  3,  0,  0,  4,  5,  7,  0,  0,  8,  9, 12, 13,  6],\n",
-       "       [ 0, -1,  0,  0,  0,  2,  3,  0,  0,  0,  4,  5,  0,  0,  0],\n",
-       "       [ 0,  0,  1,  0,  0,  0,  0,  3,  0,  0,  0,  0,  4,  5,  2],\n",
-       "       [ 0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  2,  0,  3, -1,  4,  5,  0,  0,  0,  8,  9,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0, -1,  0,  0,  0,  0,  2,  3,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0, -1,  3,  0,  0,  4,  5,  2],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3, -1]])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#                 D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em   J\n",
     "R1 = rb.array([[ -1,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],  # D\n",
@@ -1584,17 +1297,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "26 µs ± 336 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "A_star, diameter = A.transitive_closure()"
@@ -1602,17 +1307,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15.2 µs ± 3.73 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "A_lambda = A1_star.vertex_relational_composition(u, v, -1)"
@@ -1620,17 +1317,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.39 µs ± 144 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "A_lambda = R.edge_relational_composition(2, 14, 2)"
@@ -1645,20 +1334,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9999999999999998"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from numpy.linalg import det\n",
     "det(A_lambda)"
@@ -1666,20 +1344,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'red': 8, 'black': 7}"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "A_lambda.cardinality()"
    ]
@@ -1693,22 +1360,9 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
